gcc/testsuite/rust/rustc/ui/parser/new-unicode-escapes-3.rs
pub fn main() {
    let s1 = "\u{d805}"; // { dg-error "" "" { target *-*-* } }
    let s2 = "\u{ffffff}"; // { dg-error "" "" { target *-*-* } }
}

